--- a/app/views/components/_admin_menu.html.haml
+++ b/app/views/components/_admin_menu.html.haml
@@ -8,19 +8,19 @@
     %li
       %ul.dashboard-menu.nav.nav-list.collapse.in
         %li
-          %a{:href => "/restaurants"}
+          %a{:href => "/owner/restaurants"}
             %span.fa.fa-caret-right
             Restaurant
         %li
-          %a{:href => "/restaurant_features/new"}
+          %a{:href => "/owner/restaurant_features/new"}
             %span.fa.fa-caret-right
             Add Restaurant Features
         %li
-          %a{:href => "/amenitis"}
+          %a{:href => "/owner/amenitis"}
             %span.fa.fa-caret-right
             Restaurant Amenities
         %li
-          %a{:href => "/tables"}
+          %a{:href => "/owner/tables"}
             %span.fa.fa-caret-right
             Tables
     %li
@@ -31,19 +31,19 @@
     %li
       %ul.menu.nav.nav-list.collapse
         %li
-          %a{:href => "/menus"}
+          %a{:href => "/owner/menus"}
             %span.fa.fa-caret-right
             Menu
         %li
-          %a{:href => "/cuisine_types"}
+          %a{:href => "/owner/cuisine_types"}
             %span.fa.fa-caret-right
             Cuisines Type
         %li
-          %a{:href => "/cuisines"}
+          %a{:href => "/owner/cuisines"}
             %span.fa.fa-caret-right
             Cuisines
         %li
-          %a{:href => "/items"}
+          %a{:href => "/owner/items"}
             %span.fa.fa-caret-right
             Items
     %li
