--- a/app/views/components/_header.html.haml
+++ b/app/views/components/_header.html.haml
@@ -5,10 +5,9 @@
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
-    %a{:href => "index.html"}
-      %span.navbar-brand
-        %span.fa.fa-paper-plane
-        BTM
+    %a.navbar-brand{:href => "index.html",:style=>"color:white;"}
+      %span.fa.fa-paper-plane
+      BTM
   .navbar-collapse.collapse{:style => "height: 1px;"}
     %ul#main-menu.nav.navbar-nav.navbar-right
       %li.dropdown.hidden-xs
